remove empty title/desc rows

--- a/data-preprocessing.ipynb
+++ b/data-preprocessing.ipynb
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#Imports\n",
     "from __future__ import division\n",
     "import operator\n",
     "from collections import OrderedDict\n",
@@ -479,7 +479,7 @@
     "    columns_to_drop = []\n",
     "    for value, key in columns_with_missing_values.items():\n",
     "        percentage =  ((data.shape[0] - key) / data.shape[0])\n",
-    "        if (percentage < 0.98):\n",
+    "        if (percentage < 0.95):\n",
     "            columns_to_drop.append(value)\n",
     "    return columns_to_drop\n"
    ]
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
        "(125415, 48)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
        "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1195,36 +1195,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEXT_FEATURES = ['desc', 'title']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df[TEXT_FEATURES] = df[TEXT_FEATURES].replace(regex=True, \n",
+    "                                              to_replace=r'^.+ added on [^A-za-z]+ > ', value=r'')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[TEXT_FEATURES] = df[TEXT_FEATURES].replace(regex=True, \n",
+    "                                              to_replace=r'<br/>', value=r'')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[TEXT_FEATURES] = df[TEXT_FEATURES].replace(regex=True, \n",
+    "                                              to_replace=r'<br>', value=r'')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(125415, 48)"
+       "0                                        Computer\n",
+       "1                                            bike\n",
+       "2                                        personel\n",
+       "3                                        Personal\n",
+       "4                                            Loan\n",
+       "5                                 Car Downpayment\n",
+       "6            Expand Business & Buy Debt Portfolio\n",
+       "7                     Building my credit history.\n",
+       "8                      High intrest Consolidation\n",
+       "9                                         freedom\n",
+       "10                                  citicard fund\n",
+       "11                                        Holiday\n",
+       "12                                        Medical\n",
+       "13                      Freedom From Credit Cards\n",
+       "14                                   Debt Cleanup\n",
+       "15                               Credit Card Loan\n",
+       "16                                          Other\n",
+       "17                     Credit card repayment loan\n",
+       "18                             Debt Consolidation\n",
+       "19                        Debt Consolidation Loan\n",
+       "20                                  Consolidation\n",
+       "21                 December 2011 Credit Card Loan\n",
+       "22          Moving to better job; help a veteran!\n",
+       "23                        Debt Consolidation Loan\n",
+       "24                      Credit Card Consolidation\n",
+       "25                               Credit card debt\n",
+       "26                                     Other Loan\n",
+       "27                             Debt Consolidation\n",
+       "28                               Year End Cleanup\n",
+       "29                            Debt-Consolidation \n",
+       "                           ...                   \n",
+       "125385                         Debt consolidation\n",
+       "125386                         Debt consolidation\n",
+       "125387                                    odymeds\n",
+       "125388                         Debt consolidation\n",
+       "125389                    Credit card refinancing\n",
+       "125390                         Debt consolidation\n",
+       "125391                         Debt consolidation\n",
+       "125392                           Home improvement\n",
+       "125393                         Debt consolidation\n",
+       "125394                         Debt consolidation\n",
+       "125395                         Debt consolidation\n",
+       "125396                                   Business\n",
+       "125397                    Credit card refinancing\n",
+       "125398                         Debt consolidation\n",
+       "125399                           Home improvement\n",
+       "125400                                   Business\n",
+       "125401                      Learning and training\n",
+       "125402                         Debt consolidation\n",
+       "125403                                    new day\n",
+       "125404            Trying to come back to reality!\n",
+       "125405                         Debt consolidation\n",
+       "125406                                considerate\n",
+       "125407    Paying off higher interest cards & auto\n",
+       "125408                         Debt consolidation\n",
+       "125409        Prescription Drug and Medical Costs\n",
+       "125410                         Pay off Lowes Card\n",
+       "125411    New Baby and New House (CC Consolidate)\n",
+       "125412                         Debt consolidation\n",
+       "125413                    Credit Card/Auto Repair\n",
+       "125414                               Student Loan\n",
+       "Name: title, Length: 125415, dtype: object"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.shape"
+    "df.title"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,8 +1324,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Word Embeddings using SpaCy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,24 +1350,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/battogtokhb/miniconda2/lib/python2.7/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "df['title'] = df.title.str.decode('utf-8')\n",
@@ -1277,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1286,18 +1372,19 @@
        "u'Computer'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Verify unicode transformation\n",
     "df['title'][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1306,12 +1393,13 @@
        "u'  Borrower added on 12/22/11 > I need to upgrade my business technologies.<br>'"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Verify unicode transformation\n",
     "df['desc'][0]"
    ]
   },
